# tflite_infer

./: Cargo.toml  README.md  index.py  requirements.txt
src/: main.rs
